clusters/home-lab/cdk8s_definitions/dist/prod-media/prowlarr/prowlarr.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr-17.1.5
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.17.2.4511
    helm-revision: "1"
    helm.sh/chart: prowlarr-17.1.5
    release: prowlarr
    service.name: main
  name: prowlarr
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 9696
      protocol: TCP
      targetPort: 9696
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: main
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr-17.1.5
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.17.2.4511
    helm-revision: "1"
    helm.sh/chart: prowlarr-17.1.5
    release: prowlarr
    service.name: metrics
  name: prowlarr-metrics
  namespace: prod-media
spec:
  ports:
    - name: metrics
      port: 9697
      protocol: TCP
      targetPort: 9697
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    pod.name: exportarr
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr-17.1.5
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.17.2.4511
    helm-revision: "1"
    helm.sh/chart: prowlarr-17.1.5
    release: prowlarr
  name: prowlarr-exportarr
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
      pod.name: exportarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/cnpg: ffd338b55cc50a8b366097eec597eeb134dee46563555614453e28233d208d00
        checksum/configmaps: e3a9697d882b62fa6f79bd3364b55f7a4b7b4f6cc374b6916075e5d59fef20c4
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 218079e266ddbd43a84e09fb3465fe9494347d1ba309f9c314e29b41dce9eb9c
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: 9f53d4410a4b96750ba6eff5ea6d9193e80f835e1fcbd8e999a5da70f5972f28
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: prowlarr-17.1.5
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/version: 1.17.2.4511
        helm-revision: "1"
        helm.sh/chart: prowlarr-17.1.5
        pod.lifecycle: permanent
        pod.name: exportarr
        release: prowlarr
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.0.1@sha256:727e7bc8f2f0934a2117978c59f4476b954018b849a010ea6cfb380bd6539644
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: prowlarr
          ports:
            - containerPort: 9697
              name: metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: 9697
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: true
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
              pod.name: exportarr
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: varrun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr-17.1.5
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.17.2.4511
    helm-revision: "1"
    helm.sh/chart: prowlarr-17.1.5
    release: prowlarr
  name: prowlarr
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/cnpg: ffd338b55cc50a8b366097eec597eeb134dee46563555614453e28233d208d00
        checksum/configmaps: e3a9697d882b62fa6f79bd3364b55f7a4b7b4f6cc374b6916075e5d59fef20c4
        checksum/mariadb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
        checksum/persistence: 218079e266ddbd43a84e09fb3465fe9494347d1ba309f9c314e29b41dce9eb9c
        checksum/redis: 013343a028cbb3f7e08f4ba7522702dd98e52632c688641074b0b1db3df29894
        checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/services: 9f53d4410a4b96750ba6eff5ea6d9193e80f835e1fcbd8e999a5da70f5972f28
        checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
      labels:
        app: prowlarr-17.1.5
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/version: 1.17.2.4511
        helm-revision: "1"
        helm.sh/chart: prowlarr-17.1.5
        pod.lifecycle: permanent
        pod.name: main
        release: prowlarr
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: NVIDIA_VISIBLE_DEVICES
              value: void
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: PROWLARR__AUTHENTICATION_METHOD
              value: ""
            - name: PROWLARR__PORT
              value: "9696"
          image: ghcr.io/onedr0p/prowlarr-develop:1.30.2.4939@sha256:cf9e51aaabc9c6b745b34af7c5b5280ac62eb07f62b397b6b1834ba4c9862616
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /ping
              port: 9696
              scheme: HTTP
            initialDelaySeconds: 12
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: prowlarr
          ports:
            - containerPort: 9696
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 4
            httpGet:
              path: /ping
              port: 9696
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 12
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 4000m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 9696
            timeoutSeconds: 3
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: prowlarr
              app.kubernetes.io/name: prowlarr
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: tmp
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 200Mi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    checksum/services: 9f53d4410a4b96750ba6eff5ea6d9193e80f835e1fcbd8e999a5da70f5972f28
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: prowlarr-17.1.5
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.17.2.4511
    helm-revision: "1"
    helm.sh/chart: prowlarr-17.1.5
    release: prowlarr
  name: prowlarr
  namespace: prod-media
spec:
  rules:
    - host: prowlarr.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
